Feat/BE/Change : Change SuggestionRepo getSuggestionListByFamilyId -> will not return null